# Stocker-AI

./: .gitignore  README.md
backend/: .env  main.py  pyproject.toml  requirements.txt
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
